edit: project ui

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Monomaniac+One&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1><i class="fa-solid fa-code"></i> Code Editor.</h1>
+
     <div class="contaner">
     <div class="left">
-          <h2><i class="fa-brands fa-html5"></i> HTML</h2>
+          <h2 id="html-head"><i class="fa-brands fa-html5"></i> HTML</h2>
           <textarea id="html" ></textarea>
         
-          <h2><i class="fa-brands fa-css3-alt"></i> CSS</h2>
+          <h2 id="css-head"><i class="fa-brands fa-css3-alt"></i> CSS</h2>
           <textarea id="css" ></textarea>
         
-          <h2><i class="fa-brands fa-square-js"></i> JavaScript</h2>
+          <h2 id="js-head"><i class="fa-brands fa-square-js"></i> JavaScript</h2>
           <textarea id="js" ></textarea>
     </div>
     <div class="right">
